# cpptree

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
include/: cppTreeMacros.h  cppTreeNode.h
src/: cppTreeNode.cpp
test/: main.cpp
